docs: add info for education

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="container">
             <div class="header__block">
                 <div class="header__flex">
-                    <h1 class="header__title">Al Rayhan</h1>
-                    <p class="header__text">#Ui/ux Expert | #Graphic Designer</p>
+                    <h1 class="header__title">Dmitry Glotov</h1>
+                    <p class="header__text">#Stream Delivery Manager</p>
                     <form class="header__form">
                         <button class="header__btn">Hire Me!</button>
                     </form>
@@ -28,14 +28,13 @@
             </div>
         </div>
     </header>
-    <section class="aboutme">
+    <article class="aboutme">
         <div class="container">
             <div class="aboutme__flex">
                 <div class="aboutme__info">
                     <h2 class="aboutme__title">About Me</h2>
-                    <p class="aboutme__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis omnis
-                        ducimus aliquam velit pariatur vero unde, earum, repellat accusamus praesentium repudiandae
-                        ipsam, commodi nisi dolore.</p>
+                    <p class="aboutme__text">I want to study Frontend development to expand my knowledge and experience.
+                    </p>
                     <div class="aboutme__card">
                         <div class="aboutme__param">
                             <p>Name :</p>
@@ -47,21 +46,21 @@
 
                         <div class="aboutme__data">
                             <div class="aboutme__param">
-                                <p> Al Rayhan</p>
-                                <p>23 Years</p>
-                                <p>mail@deviserweb.com</p>
-                                <p>www.deviserweb.com</p>
-                                <p>24, Golden Street, New Castle</p>
+                                <p>Dmitry Glotov</p>
+                                <p>43 Years</p>
+                                <p>dmitry.glotov@gmail.com</p>
+                                <p>https://www.linkedin.com/in/dmitryglotov</p>
+                                <p>Moscow, Russia</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="aboutme__photo">
-                    <img src="./img/Layer 33.jpg" alt="">
+                    <img src="./img/Ronin.jpg" alt="">
                 </div>
             </div>
         </div>
-    </section>
+    </article>
     <sectionn class="experience">
         <div class="container">
             <h2 class="experience__title">Work Experience</h2>
@@ -121,11 +120,9 @@
                             veritatis!</p>
                     </div>
                     <div class="experience__item right long">
-                        <h3 class="experience__position">Bachelor Degree<span class="experience__company">@Lusofona
-                                University</span></h3>
-                        <p class="experience__data">Jan 2013 - Dec 2014</p>
-                        <p class="experience__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-                            veritatis!</p>
+                        <h3 class="experience__position">Engineer<span class="experience__company">@Orel State Technical University</span></h3>
+                        <p class="experience__data">Sep 1997 - Aug 2004</p>
+                        <p class="experience__text">design engineers-technologists for microelectronics and design automation of computing</p>
                     </div>
                 </div>
                 <div class="vl">
@@ -143,11 +140,10 @@
                             veritatis!</p>
                     </div>
                     <div class="experience__item left long">
-                        <h3 class="experience__position">High School<span class="experience__company">@IT Academy</span>
+                        <h3 class="experience__position">MBA<span class="experience__company">@Ranepa</span>
                         </h3>
-                        <p class="experience__data">Jan 2013 - Dec 2014</p>
-                        <p class="experience__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-                            veritatis!</p>
+                        <p class="experience__data">Sep 2007 - Aug 2009</p>
+                        <p class="experience__text">Business Administration and Management, General</p>
                     </div>
                 </div>
             </div>
@@ -237,12 +233,13 @@
     <footer class="footer">
         <div class="footer_social">
             <ul>
-                <li><a href="" class="square"><i class="fab fa-facebook-square"></i></a></li>
-                <li><a href="" class="square"><i class="fab fa-twitter-square"></i></a></li>
-                <li><a href="" class="square"> <i class="fab fa-google-plus-square"></i></i></a></li>
-                <li><a href="" class="square"><i class="fab fa-pinterest-square"></i></a></li>
-                <li><a href="" class="square"><i class="fab fa-dribbble-square"></i></a></li>
-                <li><a href="" class="square"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://www.facebook.com/" class="square" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                </li>
+                <li><a href="https://twitter.com/" class="square" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://plus.google.com/" class="square" target="_blank"> <i class="fab fa-google-plus-square"></i></i></a></li>
+                <li><a href="https://www.pinterest.pt/" class="square" target="_blank"><i class="fab fa-pinterest-square"></i></a></li>
+                <li><a href="https://dribbble.com/" class="square" target="_blank"><i class="fab fa-dribbble-square"></i></a></li>
+                <li><a href="https://www.linkedin.com/" class="square" target="_blank"><i class="fab fa-linkedin"></i></a></li>
             </ul>
         </div>
         <h2 class="footer_title">Copyright: Junaed Ahmed, All rights reserved</h2>
@@ -251,9 +248,3 @@
 </body>
 
 </html>
-
-
-
-
-
-Email :
