--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
-    <link rel="stylesheet" href="./style/aboutme.css">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Resume-theme</title>
 </head>
 
@@ -67,18 +67,16 @@
             <div class="experience__flex">
                 <div class="experience__items">
                     <div class="experience__item right">
-                        <h3 class="experience__position">Creative Director<span
-                                class="experience__company">@deviserweb</span></h3>
-                        <p class="experience__data">Jan 2013 - Dec 2014</p>
-                        <p class="experience__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-                            veritatis!</p>
+                        <h3 class="experience__position">Service delivery manager<span
+                                class="experience__company">@CoreClass</span></h3>
+                        <p class="experience__data">Oct 2012 - Nov 2020</p>
+                        <p class="experience__text">Product development and implementation</p>
                     </div>
                     <div class="experience__item right long">
-                        <h3 class="experience__position">Managing Director<span
-                                class="experience__company">@Academy</span></h3>
-                        <p class="experience__data">Jan 2013 - Dec 2014</p>
-                        <p class="experience__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-                            veritatis!</p>
+                        <h3 class="experience__position">Project Manager<span
+                                class="experience__company">@OJSC Mobile TeleSystems</span></h3>
+                        <p class="experience__data">Aug 2004 - Oct 2005</p>
+                        <p class="experience__text">Head of the Project SS7 Monitoring System</p>
                     </div>
                 </div>
                 <div class="vl">
@@ -89,20 +87,18 @@
                 </div>
                 <div class="experience__items">
                     <div class="experience__item left">
-                        <h3 class="experience__position">UI/UX Designer <span
-                                class="experience__company">@Academy</span></h3>
-                        <p class="experience__data">Jan 2013 - Dec 2014</p>
-                        <p class="experience__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-                            veritatis!</p>
+                        <h3 class="experience__position">Stream Delivery Manager<span
+                                class="experience__company">@VTB Bank</span></h3>
+                        <p class="experience__data">Nov 2020 - now</p>
+                        <p class="experience__text">I organize the work of the team to develop four products</p>
                     </div>
                     <div class="experience__item left long">
-                        <h3 class="experience__position">Ceo & Founder<span class="experience__company">@Starlab</span>
+                        <h3 class="experience__position">Director of OSS/BSS<span class="experience__company">@Rostelecom</span>
                         </h3>
-                        <p class="experience__data">Jan 2013 - Dec 2014</p>
-                        <p class="experience__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-                            veritatis!</p>
+                        <p class="experience__data">Nov 2005 - Oct 2012</p>
+                        <p class="experience__text">Development of OSS/BSS solutions</p>
                     </div>
-                </div>
+                </div>s
             </div>
 
         </div>
@@ -113,16 +109,14 @@
             <div class="experience__flex">
                 <div class="experience__items">
                     <div class="experience__item right">
-                        <h3 class="experience__position">Bsc in Art Direction<span class="experience__company">@Sussex
-                                University</span></h3>
-                        <p class="experience__data">Jan 2013 - Dec 2014</p>
-                        <p class="experience__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-                            veritatis!</p>
+                        <h3 class="experience__position">Graduation<span class="experience__company">@Tomsk State University</span></h3>
+                        <p class="experience__data">Jul 2020 - Aug 2020</p>
+                        <p class="experience__text">Agile and Scrum in working on projects and products</p>
                     </div>
                     <div class="experience__item right long">
                         <h3 class="experience__position">Engineer<span class="experience__company">@Orel State Technical University</span></h3>
                         <p class="experience__data">Sep 1997 - Aug 2004</p>
-                        <p class="experience__text">design engineers-technologists for microelectronics and design automation of computing</p>
+                        <p class="experience__text">Design engineers-technologists for microelectronics and design automation of computing</p>
                     </div>
                 </div>
                 <div class="vl">
@@ -133,11 +127,9 @@
                 </div>
                 <div class="experience__items">
                     <div class="experience__item left">
-                        <h3 class="experience__position">Graduation<span class="experience__company">@Oxford
-                                University</span></h3>
-                        <p class="experience__data">Jan 2013 - Dec 2014</p>
-                        <p class="experience__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-                            veritatis!</p>
+                        <h3 class="experience__position">Graduation<span class="experience__company">@VTB Bank</span></h3>
+                        <p class="experience__data">May 2021 - Jun 2021</p>
+                        <p class="experience__text">Stream Delivery Manager, Scaled Agile Framework® (SAFe®) </p>
                     </div>
                     <div class="experience__item left long">
                         <h3 class="experience__position">MBA<span class="experience__company">@Ranepa</span>
