docs: add info for My Skills

--- a/index.html
+++ b/index.html
@@ -146,36 +146,36 @@
         <div class="myskills__flex">
 
             <div class="myskills__card">
-                <div class="myskills_skill skill__size-1">User Experience <span class="size">90%</span>
+                <div class="myskills_skill skill__size-1">HTML <span class="size">25%</span>
                     <div class="circle__red-1"></div>
                 </div>
-                <div class="myskills_skill skill__size-1">User Experience <span class="size">98%</span>
+                <div class="myskills_skill skill__size-1">CSS <span class="size">25%</span>
                     <div class="circle__red-2"></div>
                 </div>
 
-                <div class="myskills_skill skill__size-1">User Experience <span class="size">70%</span>
+                <div class="myskills_skill skill__size-1">SQL<span class="size">50%</span>
                     <div class="circle__red-3"></div>
                 </div>
             </div>
             <div class="myskills__card">
-                <div class="myskills_skill skill__size-2">User Experience <span class="size">90%</span>
+                <div class="myskills_skill skill__size-2">Photoshop, Figma<span class="size">50%</span>
                     <div class="circle__red-4"></div>
                 </div>
-                <div class="myskills_skill skill__size-2">User Experience <span class="size">80%</span>
+                <div class="myskills_skill skill__size-2">GIT<span class="size">25%</span>
                     <div class="circle__red-5"></div>
                 </div>
-                <div class="myskills_skill skill__size-2">User Experience <span class="size">96%</span>
+                <div class="myskills_skill skill__size-2">Jira, Confluence<span class="size">96%</span>
                     <div class="circle__red-6"></div>
                 </div>
             </div>
             <div class="myskills__card">
-                <div class="myskills_skill skill__size-3">User Experience <span class="size">90%</span>
+                <div class="myskills_skill skill__size-3">Agile, Scrum, Kanban<span class="size">90%</span>
                     <div class="circle__red-7"></div>
                 </div>
-                <div class="myskills_skill skill__size-3">User Experience <span class="size">80%</span>
+                <div class="myskills_skill skill__size-3">Soft skills<span class="size">90%</span>
                     <div class="circle__red-8"></div>
                 </div>
-                <div class="myskills_skill skill__size-3">User Experience <span class="size">96%</span>
+                <div class="myskills_skill skill__size-3">English level: A1<span class="size">20%</span>
                     <div class="circle__red-9"></div>
                 </div>
             </div>
