docs: add info for Logo Rs School

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 <p>Dmitry Glotov</p>
                                 <p>43 Years</p>
                                 <p>dmitry.glotov@gmail.com</p>
-                                <p>https://www.linkedin.com/in/dmitryglotov</p>
+                                <p><a href="https://www.linkedin.com/in/dmitryglotov" target="_blank">linkedin</a></p>
                                 <p>Moscow, Russia</p>
                             </div>
                         </div>
@@ -73,8 +73,8 @@
                         <p class="experience__text">Product development and implementation</p>
                     </div>
                     <div class="experience__item right long">
-                        <h3 class="experience__position">Project Manager<span
-                                class="experience__company">@OJSC Mobile TeleSystems</span></h3>
+                        <h3 class="experience__position">Project Manager<span class="experience__company">@OJSC Mobile
+                                TeleSystems</span></h3>
                         <p class="experience__data">Aug 2004 - Oct 2005</p>
                         <p class="experience__text">Head of the Project SS7 Monitoring System</p>
                     </div>
@@ -87,13 +87,14 @@
                 </div>
                 <div class="experience__items">
                     <div class="experience__item left">
-                        <h3 class="experience__position">Stream Delivery Manager<span
-                                class="experience__company">@VTB Bank</span></h3>
+                        <h3 class="experience__position">Stream Delivery Manager<span class="experience__company">@VTB
+                                Bank</span></h3>
                         <p class="experience__data">Nov 2020 - now</p>
                         <p class="experience__text">I organize the work of the team to develop four products</p>
                     </div>
                     <div class="experience__item left long">
-                        <h3 class="experience__position">Director of OSS/BSS<span class="experience__company">@Rostelecom</span>
+                        <h3 class="experience__position">Director of OSS/BSS<span
+                                class="experience__company">@Rostelecom</span>
                         </h3>
                         <p class="experience__data">Nov 2005 - Oct 2012</p>
                         <p class="experience__text">Development of OSS/BSS solutions</p>
@@ -109,14 +110,17 @@
             <div class="experience__flex">
                 <div class="experience__items">
                     <div class="experience__item right">
-                        <h3 class="experience__position">Graduation<span class="experience__company">@Tomsk State University</span></h3>
+                        <h3 class="experience__position">Graduation<span class="experience__company">@Tomsk State
+                                University</span></h3>
                         <p class="experience__data">Jul 2020 - Aug 2020</p>
                         <p class="experience__text">Agile and Scrum in working on projects and products</p>
                     </div>
                     <div class="experience__item right long">
-                        <h3 class="experience__position">Engineer<span class="experience__company">@Orel State Technical University</span></h3>
+                        <h3 class="experience__position">Engineer<span class="experience__company">@Orel State Technical
+                                University</span></h3>
                         <p class="experience__data">Sep 1997 - Aug 2004</p>
-                        <p class="experience__text">Design engineers-technologists for microelectronics and design automation of computing</p>
+                        <p class="experience__text">Design engineers-technologists for microelectronics and design
+                            automation of computing</p>
                     </div>
                 </div>
                 <div class="vl">
@@ -127,7 +131,8 @@
                 </div>
                 <div class="experience__items">
                     <div class="experience__item left">
-                        <h3 class="experience__position">Graduation<span class="experience__company">@VTB Bank</span></h3>
+                        <h3 class="experience__position">Graduation<span class="experience__company">@VTB Bank</span>
+                        </h3>
                         <p class="experience__data">May 2021 - Jun 2021</p>
                         <p class="experience__text">Stream Delivery Manager, Scaled Agile Framework® (SAFe®) </p>
                     </div>
@@ -201,21 +206,21 @@
                         <div class="message__img"><img src="./img/Home.svg" alt=""></div>
                         <div class="message__text">
                             <h3>Location</h3>
-                            <p>324, Golden Tower, Amborkhana, Sylhet</p>
+                            <p>Moscow, Russia</p>
                         </div>
                     </div>
                     <div class="message__items">
                         <div class="message__img"><img src="./img/Mail.svg" alt=""></div>
                         <div class="message__text">
                             <h3>Email</h3>
-                            <p>junaed@deviserweb.com</p>
+                            <p>dmitry.glotov@gmail.com</p>
                         </div>
                     </div>
                     <div class="message__items">
                         <div class="message__img"><img src="./img/phone.svg" alt=""></div>
                         <div class="message__text">
-                            <h3>Toll Free Call</h3>
-                            <p>0800 234 6578</p>
+                            <h3>Phone</h3>
+                            <p>+7 985 XXX XX XX</p>
                         </div>
                     </div>
                 </div>
@@ -224,17 +229,29 @@
     </secttion>
     <footer class="footer">
         <div class="footer_social">
-            <ul>
-                <li><a href="https://www.facebook.com/" class="square" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                </li>
-                <li><a href="https://twitter.com/" class="square" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-                <li><a href="https://plus.google.com/" class="square" target="_blank"> <i class="fab fa-google-plus-square"></i></i></a></li>
-                <li><a href="https://www.pinterest.pt/" class="square" target="_blank"><i class="fab fa-pinterest-square"></i></a></li>
-                <li><a href="https://dribbble.com/" class="square" target="_blank"><i class="fab fa-dribbble-square"></i></a></li>
-                <li><a href="https://www.linkedin.com/" class="square" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-            </ul>
+            <div>
+                <a href="https://rs.school/js/" target="_blank"><img src="img/rs_school_js.svg" alt="rss school"
+                        width="80" height="80"></a>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="https://www.facebook.com/" class="square" target="_blank"><i
+                                class="fab fa-facebook-square"></i></a>
+                    </li>
+                    <li><a href="https://twitter.com/" class="square" target="_blank"><i
+                                class="fab fa-twitter-square"></i></a></li>
+                    <li><a href="https://plus.google.com/" class="square" target="_blank"> <i
+                                class="fab fa-google-plus-square"></i></i></a></li>
+                    <li><a href="https://www.pinterest.pt/" class="square" target="_blank"><i
+                                class="fab fa-pinterest-square"></i></a></li>
+                    <li><a href="https://dribbble.com/" class="square" target="_blank"><i
+                                class="fab fa-dribbble-square"></i></a></li>
+                    <li><a href="https://www.linkedin.com/" class="square" target="_blank"><i
+                                class="fab fa-linkedin"></i></a></li>
+                </ul>
+            </div>
         </div>
-        <h2 class="footer_title">Copyright: Junaed Ahmed, All rights reserved</h2>
+
     </footer>
 
 </body>
