refactor: change structure of the project

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="aboutme__photo">
-                    <img src="./img/Ronin.jpg" alt="">
+                    <img src="./img/Ronin.jpg" alt="Avatar Ronin" width="380" height="581">
                 </div>
             </div>
         </div>
@@ -80,10 +80,10 @@
                     </div>
                 </div>
                 <div class="vl">
-                    <img class="cirlce_1" src="./img/circle.svg" alt="">
-                    <img class="cirlce_2" src="./img/circle.svg" alt="">
-                    <img class="cirlce_3" src="./img/circle.svg" alt="">
-                    <img class="cirlce_4" src="./img/circle.svg" alt="">
+                    <img class="cirlce_1" src="./img/circle.svg" alt="marker" width="48" height="48">
+                    <img class="cirlce_2" src="./img/circle.svg" alt="marker" width="48" height="48">
+                    <img class="cirlce_3" src="./img/circle.svg" alt="marker" width="48" height="48">
+                    <img class="cirlce_4" src="./img/circle.svg" alt="marker" width="48" height="48">
                 </div>
                 <div class="experience__items">
                     <div class="experience__item left">
@@ -124,10 +124,10 @@
                     </div>
                 </div>
                 <div class="vl">
-                    <img class="cirlce_1" src="./img/circle.svg" alt="">
-                    <img class="cirlce_2" src="./img/circle.svg" alt="">
-                    <img class="cirlce_3" src="./img/circle.svg" alt="">
-                    <img class="cirlce_4" src="./img/circle.svg" alt="">
+                    <img class="cirlce_1" src="./img/circle.svg" alt="marker" width="48" height="48">
+                    <img class="cirlce_2" src="./img/circle.svg" alt="marker" width="48" height="48">
+                    <img class="cirlce_3" src="./img/circle.svg" alt="marker" width="48" height="48">
+                    <img class="cirlce_4" src="./img/circle.svg" alt="marker" width="48" height="48">
                 </div>
                 <div class="experience__items">
                     <div class="experience__item left">
@@ -203,21 +203,21 @@
                 </div>
                 <div class="message__contacts">
                     <div class="message__items">
-                        <div class="message__img"><img src="./img/Home.svg" alt=""></div>
+                        <div class="message__img"><img src="./img/Home.svg" alt="Home" width="40" height="40"></div>
                         <div class="message__text">
                             <h3>Location</h3>
                             <p>Moscow, Russia</p>
                         </div>
                     </div>
                     <div class="message__items">
-                        <div class="message__img"><img src="./img/Mail.svg" alt=""></div>
+                        <div class="message__img"><img src="./img/Mail.svg" alt="Mail" width="40" height="40"></div>
                         <div class="message__text">
                             <h3>Email</h3>
                             <p>dmitry.glotov@gmail.com</p>
                         </div>
                     </div>
                     <div class="message__items">
-                        <div class="message__img"><img src="./img/phone.svg" alt=""></div>
+                        <div class="message__img"><img src="./img/Phone.svg" alt="Photo" width="40" height="40"></div>
                         <div class="message__text">
                             <h3>Phone</h3>
                             <p>+7 985 XXX XX XX</p>
