refactor: change structure of the project

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="header__flex">
                     <h1 class="header__title">Dmitry Glotov</h1>
                     <p class="header__text">#Stream Delivery Manager</p>
-                    <form class="header__form">
+                    <form class="header__form" method="post">
                         <button class="header__btn">Hire Me!</button>
                     </form>
                 </div>
@@ -191,12 +191,12 @@
             <h2 class="message__title">Leave a Message</h2>
             <div class="message__flex">
                 <div class="message__box">
-                    <form class="message___form">
+                    <form class="message___form" method="post">
                         <input type="text" placeholder="Name *">
                         <input type="email" placeholder="eMail *">
                         <input type="text" placeholder="Subject *">
                     </form>
-                    <form class="message__message">
+                    <form class="message__message" method="post">
                         <textarea name="" placeholder="Message *"></textarea>
                         <button class="message__btn">Hire Me!</button>
                     </form>
@@ -230,8 +230,13 @@
     <footer class="footer">
         <div class="footer_social">
             <div>
-                <a href="https://rs.school/js/" target="_blank"><img src="img/rs_school_js.svg" alt="rss school"
+                <a href="https://rs.school/js" target="_blank"><img src="img/rs_school_js.svg" alt="rss school"
                         width="80" height="80"></a>
+                <a href="https://github.com/prizma-ru" target="_blank"><img src="img/github.svg" alt="Logo GitHub"
+                        width="50" height="50"></a>
+            </div>
+            <div>
+                <h3>© 2021, Prizma</h3>
             </div>
             <div>
                 <ul>
