fix: bug and Error

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </div>
     </article>
-    <sectionn class="experience">
+    <section class="experience">
         <div class="container">
             <h2 class="experience__title">Work Experience</h2>
             <div class="experience__flex">
@@ -103,8 +103,8 @@
             </div>
 
         </div>
-    </sectionn>
-    <sectionn class="education">
+    </section>
+    <section class="education">
         <div class="container">
             <h2 class="experience__title">Education</h2>
             <div class="experience__flex">
@@ -145,7 +145,7 @@
                 </div>
             </div>
         </div>
-    </sectionn>
+    </section>
     <section class="myskills">
         <h2 class="myskills__title">My Skills</h2>
         <div class="myskills__flex">
@@ -246,7 +246,7 @@
                     <li><a href="https://twitter.com/" class="square" target="_blank"><i
                                 class="fab fa-twitter-square"></i></a></li>
                     <li><a href="https://plus.google.com/" class="square" target="_blank"> <i
-                                class="fab fa-google-plus-square"></i></i></a></li>
+                                class="fab fa-google-plus-square"></i></a></li>
                     <li><a href="https://www.pinterest.pt/" class="square" target="_blank"><i
                                 class="fab fa-pinterest-square"></i></a></li>
                     <li><a href="https://dribbble.com/" class="square" target="_blank"><i
