fix: bug and Error

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </div>
         </div>
     </section>
-    <secttion class="message">
+    <section class="message">
         <div class="container">
             <h2 class="message__title">Leave a Message</h2>
             <div class="message__flex">
@@ -197,7 +197,7 @@
                         <input type="text" placeholder="Subject *">
                     </form>
                     <form class="message__message" method="post">
-                        <textarea name="" placeholder="Message *"></textarea>
+                        <textarea name="Message" placeholder="Message *"></textarea>
                         <button class="message__btn">Hire Me!</button>
                     </form>
                 </div>
@@ -226,7 +226,7 @@
                 </div>
             </div>
         </div>
-    </secttion>
+    </section>
     <footer class="footer">
         <div class="footer_social">
             <div>
