refactor: change structure of the project, div -> li

--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@
                     <p class="aboutme__text">I want to study Frontend development to expand my knowledge and experience.
                     </p>
                     <div class="aboutme__card">
-                        <div class="aboutme__param">
-                            <p>Name :</p>
-                            <p>Age :</p>
-                            <p>Email :</p>                            
-                            <p>Address :</p>
-                            <p>Web :</p>
-                            <p>Sample code:</p>
-                        </div>
-
+                        <ul class="aboutme__param">
+                            <li>Name :</li>
+                            <li>Age :</li>
+                            <li>Email :</li>
+                            <li>Address :</li>
+                            <li>Web :</li>
+                            <li>Sample code:</li>
+                        </ul>
                         <div class="aboutme__data">
                             <ul class="aboutme__param">
                                 <li>Dmitry Glotov</li>
@@ -55,7 +54,6 @@
                                 <li><a href="https://github.com/prizma-ru" target="_blank">GitHub</a></li>
                             </ul>
                         </div>
-                        
                     </div>
                 </div>
                 <div class="aboutme__photo">
