added to footer you need to add a link to your github, year of application creation, course logo with a link to the course

--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
     </section>
     <footer class="footer">
         <div class="footer_social">
-            <div>
-                <a href="https://rs.school/js" target="_blank"><img src="img/rs_school_js.svg" alt="rss school"
+            <div class="social__icon">
+                <a class="icon__rsschool" href="https://rs.school/js" target="_blank"><img src="img/rs_school_js.svg" alt="rss school"
                         width="80" height="80"></a>
-                <a href="https://github.com/prizma-ru" target="_blank"><img src="img/github.svg" alt="Logo GitHub"
+                <a class="icon__github" href="https://github.com/prizma-ru" target="_blank"><img src="img/github.svg" alt="Logo GitHub"
                         width="50" height="50"></a>
             </div>
             <div>
