fix: bug and Error

--- a/index.html
+++ b/index.html
@@ -24,15 +24,25 @@
             <div class="header__block">
                 <div class="header__flex">
                     <h1 class="header__title">Dmitry Glotov</h1>
-                    <p class="header__text">#Stream Delivery Manager</p>
+                    <p class="header__text">#Junior Frontend Developer</p>
                     <form class="header__form" method="post">
-                        <button class="header__btn">Hire Me!</button>
+                        <button class="header__btn">Hire Me! TBD :-)</button>
                     </form>
+                    <nav class="header__nav">
+                        <ul class="header__nav-element">
+                            <li><a href="#about-id" class="nav__link ">About Me</a></li>
+                            <li><a href="#skills-id" class="nav__link ">My Skills</a></li>
+                            <li><a href="#experience-id" class="nav__link ">Work Experience</a></li>
+                            <li><a href="#education-id" class="nav__link ">Education</a></li>
+                            <li><a href="#portfolio-id" class="nav__link ">Portfolio</a></li>
+                            <li><a href="#code-id" class="nav__link ">Code examples</a></li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </div>
     </header>
-    <article class="aboutme">
+    <article class="aboutme" id="about-id">
         <div class="container">
             <div class="aboutme__flex">
                 <div class="aboutme__info">
@@ -66,8 +76,7 @@
             </div>
         </div>
     </article>
-    <section class="myskills">
-
+    <section class="myskills" id="skills-id">
         <div class="container">
             <h2 class="myskills__title">My Skills</h2>
             <div class="myskills__flex">
@@ -110,7 +119,7 @@
         </div>
 
     </section>
-    <section class="experience">
+    <section class="experience" id="experience-id">
         <div class="container">
             <h2 class="experience__title">Work Experience</h2>
             <div class="experience__flex">
@@ -153,7 +162,7 @@
 
         </div>
     </section>
-    <section class="education">
+    <section class="education" id="education-id">
         <div class="container">
             <h2 class="experience__title">Education</h2>
             <div class="experience__flex">
@@ -195,7 +204,7 @@
             </div>
         </div>
     </section>
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio-id">
         <div class="container">
             <h2 class="portfolio__title">Portfolio</h2>
             <div class="visiting__items">
@@ -241,13 +250,10 @@
                         <h3 class="item__titel">CV#3. CV. Cross-Check</h3>
                     </a>
                 </article>
-
             </div>
         </div>
-
     </section>
-
-    <section class="code">
+    <section class="code" id="code-id">
         <div class="container">
             <h2 class="message__title">Code examples</h2>
             <pre>
