fix: bug and Error

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             </div>
         </div>
     </article>
-    <section class="myskills" id="skills-id">
+    <main class="main">
+          <section class="myskills" id="skills-id">
         <div class="container">
             <h2 class="myskills__title">My Skills</h2>
             <div class="myskills__flex">
@@ -277,7 +278,9 @@
                 </code>
             </pre>
         </div>
-    </section>
+    </section>  
+    </main>
+
     <footer class="footer">
         <div class="container">
             <div class="footer_social">
